add list reviews in gameplatform